unified_tests/file_roles/test_declaration_in_library_file/expect/build.text.stderr
lib.copp:1:1: error: test declarations are only allowed in .test.copp files
  test "t" {}
  ^
